--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "my-app",
+  "name": "example-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tranviensb.github.io/example/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.0.0",
     "@shopify/polaris": "^12.22.0",
     "@zeit/next-css": "^1.0.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "gh-pages": "^6.1.1",
     "next": "^14.1.4",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
